# dantec-graphql

./: .gitignore  README.md  main.py  pyproject.toml
api/: query.py  schema.py
api/nomad/: query.py
api/nomad/resolvers/: __init__.py  element.py  entry.py  nomad_entry.py
api/nomad/resolvers/nomad_data_access/: __init__.py  nomad_entry_query_api.py  nomad_pagination.py
api/nomad/types/: __init__.py  dataset.py  element.py  entry.py  section_def.py  user.py
api/resolvers/inputs/: __init__.py  pagination_input.py  search_record_input.py
api/types/: __init__.py  cursor.py  forward_page_info.py  record.py
api/utils/: json_resource.py
